Input fields jumping fixed

--- a/frontend/src/assets/css/global.css
+++ b/frontend/src/assets/css/global.css
@@ -132,3 +132,21 @@ h1 {
 select {
    padding: 12px 0 0 20px;
 }
+
+.vs-input-parent, .vs-select-content {
+    margin-bottom: 1.5em;
+}
+
+.vs-input__message {
+    position: absolute;
+    top: 5.2em;
+}
+
+.vs-select__message {
+    position: absolute;
+}
+
+.vs-input__progress {
+    position: absolute;
+    top: 9px;
+}
